src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>LOCC_App__Call_Recording__c</fullName>
        <formula>HYPERLINK( LOCC_App__LO_CC_base_URL__c  &amp; &quot;/html/play.cgi?session_id=&quot; &amp; CallObject, &quot;Play Recording&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__LO_CC_base_URL__c</fullName>
        <label>LO CC base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LOCC_App__calllength__c</fullName>
        <label>Call Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCC_App__callscore__c</fullName>
        <label>Call Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCC_App__campaignid__c</fullName>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__campaignname__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__dnis__c</fullName>
        <label>DNIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__interactionid__c</fullName>
        <label>Interaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__phonenumbercountry__c</fullName>
        <label>Phone Number Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__wrapuplength__c</fullName>
        <label>Wrap Up Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>